--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "engines": {
+  "node": "18.x"
+}
   "dependencies": {
     "framer-motion": "^10.12.16",
     "react": "^18.2.0",
