--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shikor org",
+  "name": "shikor",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -7,21 +7,15 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "engines": {
-    "node": "18.x"
-  },
   "dependencies": {
-    "framer-motion": "^10.12.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-router-dom": "^6.18.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.4.8",
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.2.1"
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.15",
+    "vite": "^5.4.10"
   }
 }
